release: 0.3.0 - adding profiler and jmh